--- a/content.html
+++ b/content.html
@@ -23,8 +23,9 @@
 <body>
   <div id="About">
     <h2>About Me</h2>
-    <p>Undergraduate student at the University of Kentucky, pursuing a degree in mathematics. Along with learning web development skills, I am interested in embedded software engineering, data science, and machine and deep learning. I am also interested in linear algebra, astract algebra, and their applications.
+    <p>Undergraduate student at the University of Kentucky, pursuing a degree in mathematics. Along with learning web development skills, I am interested in software engineering, data science, quality assurance, machine and deep learning, and specifically topological data analysis. I am also interested in linear algebra, topology, and their applications.
     </p>
+    <p>I currently intern for SaRA Health as a web development intern. I work to build out webpages using HTML and CSS.</p>
     
   </div>
   
@@ -32,7 +33,7 @@
     <h2>Portfolio</h2>
     <p>This is my current portfolio, and new projects are added regularly! I am constantly working on Python, C++, and web development projects.</p>
     <div>
-      <img src="https://i.imgur.com/bCKR0mv.png" alt= "basketball stat keeping project">
+      <img src=https://github.com/zacknewcomb/BBallTeamProj/blob/master/Screenshot%20(61).png?raw=true alt= "basketball stat keeping project">
     </div>
     <div id="bball-link" class="no-underline">
       <a target="_blank" style="color:rgb(102,102,255)"href="https://github.com/zacknewcomb/BBallTeamProj">Basketball Stat Keeping Project</a>
