--- a/personalWebpageContent.html
+++ b/personalWebpageContent.html
@@ -68,7 +68,7 @@
 		<p>Graduate student at Ohio University, pursuing a master's degree in degree in mathematics. I graduated from the University of Kentucky in May 2020 with a bachelor's degree in mathematics, along with a minor in computer science. Aside from learning web development, I am interested in software engineering, data science, quality assurance, machine learning, and applied and numerical analysis.
 		</p>
     
-		<p>I am currently a teaching assistant at Ohio University. I returned to Dynetics for the summer of 2020. In my last semester at the University of Kentucky, I was a grading TA for MA/CS 321 taught by Dr. Greg Wasilkowski. I was a software engineering intern at Dynetics for the summer of 2019. I interned for ClassCalc as a QA Engineering Intern in the summer of 2018. I concluded an internship with SaRA: Simplifying Recovery Assistant, working on their development team in the spring of 2018.</p>    
+		<p>I am currently a teaching assistant at Ohio University. I interned at Dynetics during the summer of 2020. In my last semester at the University of Kentucky, I was a grading TA for MA/CS 321 taught by Dr. Greg Wasilkowski. I was a software engineering intern at Dynetics for the summer of 2019. I interned for ClassCalc as a QA Engineering Intern in the summer of 2018. I concluded an internship with SaRA: Simplifying Recovery Assistant, working on their development team in the spring of 2018.</p>    
 	</div>
     <!-- About Me End -->
     
